# py_multinet

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DESCRIPTION  DESCRIPTION.md  LICENSE  MANIFEST.in  NEWS  README.md  bitbucket-pipelines.yml  pyproject.toml  setup.py  travis_old.yml
.github/workflows/: package.yaml  package.yml  publish-test.yml  publish.yml  test-windows.yml
C++/: PyEvolutionModel.hpp  PyMLNetwork.hpp  main.cpp  py_functions.cpp  py_functions.hpp  py_functions1.cpp  py_functions2.cpp  pycpp_utils.cpp  pycpp_utils.hpp
tutorial/: README.md  example1.txt  example2.txt  py_multinet.ipynb
uunet/: __init__.py  multinet.py
uunet/data/: florentine.mpx  monastery.mpx  tailorshop.mpx
