[build-system]
requires = ["setuptools","cmake>=3.20"]
build-backend = "setuptools.build_meta"

[project]
name = "uunet"
version= "2.2"
authors = [
    {name = "Matteo Magnani", email = "matteo.magnani@it.uu.se"}
]
description = "Python porting of the multinet library"
readme = "DESCRIPTION.md"
requires-python = ">=3.8"
keywords = ["network analysis","multilayer"]
license = {text = "Apache 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "networkx",
    "matplotlib"
]

[options]
include_package_data = "true"
zip_safe = "true"

[project.urls]
homepage = "https://github.com/uuinfolab/py_multinet"
